--- a/templates/partials/css.hbs
+++ b/templates/partials/css.hbs
@@ -23,8 +23,8 @@
 	<link href="/styles/core.css" rel="stylesheet"/>
 
 	{{!-- Bower plugins --}}
-	<link rel="stylesheet" href="/bower_components/glidejs/dist/css/glide.core.css">
-	<link rel="stylesheet" href="/bower_components/glidejs/dist/css/glide.theme.css">
+	{{!-- <link rel="stylesheet" href="/bower_components/glidejs/dist/css/glide.core.css"> --}}
+	{{!-- <link rel="stylesheet" href="/bower_components/glidejs/dist/css/glide.theme.css"> --}}
 
 {{else}}
 
