--- a/templates/partials/script/development.hbs
+++ b/templates/partials/script/development.hbs
@@ -36,7 +36,7 @@
 <script type="text/javascript" src="/bower_components/ion-sound/js/ion.sound.js"></script>
 
 {{!-- Glide javascript --}}
-<script type="text/javascript" src="/bower_components/glidejs/dist/glide.js"></script>
+{{!-- <script type="text/javascript" src="/bower_components/glidejs/dist/glide.js"></script> --}}
 
 {{!-- GSAP Timeline --}}
 <script type="text/javascript" src="/plugins/gsap-timeline-slider.js"></script>
