--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -648,17 +648,36 @@
 			position: absolute;
 			right: 9%;
 			bottom: 11%;
+			z-index: 100;
 		}
 
-		.text {
-			border: solid 2px black;
-			font-size: 13px;
-			font-weight: 600;
-			line-height: 1.38;
-			letter-spacing: 0px;
-			text-align: center;
-			color: black;
+		.content {
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 100%;
+			background-color: #f8f8f5;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-evenly;
+			
+			img {
+				transform-origin: left;
+			}
+			.text {
+				position: absolute;
+				bottom: 0;
+				border: solid 2px black;
+				background-color: #f8f8f5;
+				font-size: 13px;
+				font-weight: 600;
+				line-height: 1.38;
+				letter-spacing: 0px;
+				text-align: center;
+				color: black;
+			}
 		}
+
 	}
 
 }
