--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -83,7 +83,7 @@
       </div>
 
       <div class="form" id="start">
-        <div id="btn-start-game" class="btn btn-default submit" data-event="game:start">
+        <div id="btn-start-game" class="btn btn-default submit" data-event="game:intro">
           <h2>Start</h2>
         </div>
       </div>
@@ -152,27 +152,39 @@
   <section class="form" id="intro" style="display:none">
     
     <div class="intro panel">
-      <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_425/v1540490701/at-stake/bg/street" alt="Intro screen 1 image">
       <button class="submit" data-event="game:next_screen"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/check-btn.svg" alt="Go to next screen"></button>
-      <div class="text">{{text.[0]}}</div>
+      <div class="content">
+        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_850/v1540490701/at-stake/bg/street" alt="Intro screen 1 image">
+      
+        <div class="text">{{text.[0]}}</div>
+      </div>
     </div>
 
     <div class="intro panel" style="display:none">
-      <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_425/v1540490701/at-stake/bg/evil" alt="Intro screen 2 image">
       <button class="submit" data-event="game:next_screen"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/check-btn.svg" alt="Go to next screen"></button>
-      <div class="text">{{text.[1]}}</div>
+      <div class="content">
+        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_850/v1540490701/at-stake/bg/evil" alt="Intro screen 2 image">
+      
+        <div class="text">{{text.[1]}}</div>
+      </div>
     </div>
     
     <div class="intro panel" style="display:none">
-      <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_425/v1540490701/at-stake/bg/city" alt="Intro screen 3 image">
       <button class="submit" data-event="game:next_screen"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/check-btn.svg" alt="Go to next screen"></button>
-      <div class="text">{{text.[2]}}</div>
+      <div class="content">
+        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_850/v1540490701/at-stake/bg/city" alt="Intro screen 3 image">
+      
+        <div class="text">{{text.[2]}}</div>
+      </div>
     </div>
     
     <div class="intro panel" style="display:none">
-      <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_425/v1540490701/at-stake/bg/bunker" alt="Intro screen 4 image">
       <button class="submit" data-event="game:start"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/check-btn.svg" alt="Start game"></button>
-      <div class="text">{{text.[3]}}</div>
+      <div class="content">
+        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_850/v1540490701/at-stake/bg/bunker" alt="Intro screen 4 image">
+      
+        <div class="text">{{text.[3]}}</div>
+      </div>
     </div>
 
   </section>
