Working intro cutscene.

--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -656,12 +656,14 @@
 			top: 0;
 			left: 0;
 			height: 100%;
+			width: 100%;
 			background-color: #f8f8f5;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-evenly;
 			
 			img {
+				position: absolute;
 				transform-origin: left;
 			}
 			.text {
