Allow scrolling on small screens.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -22,7 +22,8 @@
 	text-align: center;
 	padding: 0;
 	padding-bottom: 8px;
-	padding-top: 40px;
+	// padding-top: 40px;
+	overflow-y: scroll;
 
 	// During the gameplay
 	&.in-game {
