--- a/templates/partials/script/decider_logic.hbs
+++ b/templates/partials/script/decider_logic.hbs
@@ -47,10 +47,10 @@
       );
 
       // If screen too small, show error saying so
-      if($(window).outerHeight() < 600)
-          $('#error-size').trigger('show');
-      else
-          $('#error-size').hide();
+    //   if($(window).outerHeight() < 600)
+    //       $('#error-size').trigger('show');
+    //   else
+    //       $('#error-size').hide();
 
 
   }
