--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -152,9 +152,9 @@
   <section class="form" id="intro" style="display:none">
     
     <div class="intro panel">
-      <button class="submit" data-event="game:next_screen"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/check-btn.svg" alt="Go to next screen"></button>
+      <button class="submit" style="display:none" data-event="game:next_screen"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/check-btn.svg" alt="Go to next screen"></button>
       <div class="content">
-        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_850/v1540490701/at-stake/bg/street" alt="Intro screen 1 image">
+        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_425/v1540490701/at-stake/bg/street" alt="Intro screen 1 image">
       
         <div class="text">{{text.[0]}}</div>
       </div>
@@ -163,7 +163,7 @@
     <div class="intro panel" style="display:none">
       <button class="submit" data-event="game:next_screen"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/check-btn.svg" alt="Go to next screen"></button>
       <div class="content">
-        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_850/v1540490701/at-stake/bg/evil" alt="Intro screen 2 image">
+        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_425/v1540490701/at-stake/bg/evil" alt="Intro screen 2 image">
       
         <div class="text">{{text.[1]}}</div>
       </div>
@@ -172,7 +172,7 @@
     <div class="intro panel" style="display:none">
       <button class="submit" data-event="game:next_screen"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/check-btn.svg" alt="Go to next screen"></button>
       <div class="content">
-        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_850/v1540490701/at-stake/bg/city" alt="Intro screen 3 image">
+        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_425/v1540490701/at-stake/bg/city" alt="Intro screen 3 image">
       
         <div class="text">{{text.[2]}}</div>
       </div>
@@ -181,7 +181,7 @@
     <div class="intro panel" style="display:none">
       <button class="submit" data-event="game:start"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/check-btn.svg" alt="Start game"></button>
       <div class="content">
-        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_850/v1540490701/at-stake/bg/bunker" alt="Intro screen 4 image">
+        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_425/v1540490701/at-stake/bg/bunker" alt="Intro screen 4 image">
       
         <div class="text">{{text.[3]}}</div>
       </div>
