--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -23,6 +23,7 @@ $dark-sky-blue: #20b5e6;
 $color-teal: #039b8a;
 $bluegreen: #02826a;
 $cerulean-blue: #0067d8;
+$true-blue: #002ab7;
 
 // Red
 $color-red: #ff4700;
