--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -4,6 +4,11 @@
 	{{!-- ROLE --}}
 	<div class="screen initial">
 
+		{{> component/interstitial 
+			title="Introduction"
+			phase=1
+		}}
+		
 		{{> shared/rolecard player.role}}
 
 	</div>
