--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -83,7 +83,7 @@
       </div>
 
       <div class="form" id="start">
-        <div id="btn-start-game" class="btn btn-default submit" data-event="game:intro">
+        <div id="btn-start-game" class="btn btn-default submit" data-event="game:start{{!--game:intro--}}">
           <h2>Start</h2>
         </div>
       </div>
