File cleanup, animation fixes, work on player resume after disconnection.

--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -308,7 +308,7 @@
 		.game_login {
 			width: 80%;
 			white-space: normal;
-			color: black;
+			color: white;
 			border: 0px;
 			border-radius: 0px;
 			height: 48px;
