--- a/templates/partials/shared/rolecard.hbs
+++ b/templates/partials/shared/rolecard.hbs
@@ -12,16 +12,16 @@
 	
 	</div>
 	
-	<div class="description">{{{bio.html}}}</div>
+	<div class="description">{{{role.bio.html}}}</div>
 
 	<div class="agenda-wrap form">
 
 		<div id="needs">
 				<h1 class="header">Needs</h1> 
-			{{#if needs}}
-				<div class="agenda-item"><div class="agenda">{{needs.[0]}}</div></div>
+			{{#if role.needs}}
+				<div class="agenda-item"><div class="agenda">{{role.needs.[0]}}</div></div>
 				<span id="div"></span>
-				<div class="agenda-item"><div class="agenda">{{needs.[1]}}</div></div>
+				<div class="agenda-item"><div class="agenda">{{role.needs.[1]}}</div></div>
 			{{else}}
 				<div class="agenda-item"><div class="agenda">Example need 1</div></div>
 				<span id="div"></span>
@@ -31,8 +31,8 @@
 
 			
 		<h1 class="header"><span class="star">&#9733;</span>Secret Goal<span class="star">&#9733;</span></h1> 
-		{{#if secretGoal}}
-			<div>{{secretGoal}}</div>
+		{{#if role.secretGoal}}
+			<div>{{role.secretGoal}}</div>
 		{{else}}
 			<div>Example goal</div>
 		{{/if}}
