--- a/templates/partials/shared/deliberate.hbs
+++ b/templates/partials/shared/deliberate.hbs
@@ -12,7 +12,7 @@
 		{{> component/instructions 
 				decider=true
 				heading="Deliberate"
-				body="Think of solutions to the problem scenario below. Consider your teammates' needs when deliberating. Keep in mind equity, fidelity,  and cost effectiveness."
+				body="need instruction text"
 		}}
 
 		{{> component/instructions 
@@ -25,11 +25,10 @@
 				secondary=question
 				scenario=true
 		}}
-		
-
-			<button id="btn-ready" class="btn submit player" type="submit" name="submit" data-event="game:ready" data-package="timer">
-				Ready
-			</button>
+	
+		<button id="btn-ready" class="btn submit player" type="submit" name="submit" data-event="game:ready" data-package="timer">
+			Ready
+		</button>
 
 		{{> component/speech
 				decider=true
@@ -42,12 +41,12 @@
 		{{#ifeq timerRunning false}}
 			{{> component/timer 
 					decider=true
-					disabled=false
+					disabled=true
 			}}
 		{{else}}
 			{{> component/timer 
 					decider=true
-					disabled=true
+					disabled=false
 			}}
 		{{/ifeq}}
 
@@ -78,13 +77,13 @@
 
 	</div>
 
-	{{!-- DELIBERATE --}}
-	<div class="screen restart">
+	{{!-- DELIBERATE (NON-FACILITATOR) --}}
+	<div class="screen">
 
 		{{> component/instructions 
 				decider=true
 				heading="Deliberate"
-				body="Think of solutions to the problem scenario below. Consider your teammates' needs when deliberating. Keep in mind equity, fidelity,  and cost effectiveness."
+				body="need instruction text"
 		}}
 
 		{{> component/instructions 
@@ -142,6 +141,39 @@
 			<h1>Time's up!</h1>
 			<h3>This would be a good time to call to vote</h3>
 		</div>
+
+
+		{{!-- Show the following only when facilitator re-joins after leaving --}}
+		{{> component/timer 
+				decider=true
+				disabled=false
+		}}
+
+		<div id="events" class="decider form">
+			{{#each events}}
+				<div class="event">
+					<div class="content">
+						
+						<div>
+							<h3>New Event</h3>
+						 	<h1>{{text}}</h1>
+						</div>
+		
+						<div class="buttons">
+							<button id="btn-confirm" class="btn submit" type="submit" name="submit" data-event="game:event" data-package='{ "state":"confirm", "index":"{{@index}}" }'>	
+								{{#ifeq @index 0}}<detail class="tooltip-content">You can choose to accept or ignore events that will complicate players' solutions.</detail>{{/ifeq}}
+								&#x2714;
+							</button>
+							<button id="btn-reject" class="btn submit" type="submit" name="submit" data-event="game:event" data-package='{ "state":"reject", "index":"{{@index}}" }'>
+								&#65794;
+							</button>
+						</div>
+						
+					</div>
+				</div>
+			{{/each}}
+		</div>
+
 
 	</div>
 
