--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -66,7 +66,7 @@
      
 	</div>
 
-	{{!-- QUESTION --}}
+	{{!-- QUESTION (NON-FACILITATOR) --}}
 	<div class="screen">
 
 		{{> component/instructions 
