--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -143,7 +143,7 @@
       <div class="form-prompt">You were playing the active session w/ code "<span id="code">CODE</span>". Resume?</div>
       <p class="light instructions"></p>
       <input type="text" id="access_code_hidden" maxlength="4" style="display: none">
-      <input id="btn_submit_rejoin" class="btn btn-default game_login" type="submit" name="submit" value="Yes">
+      <input id="btn_submit_rejoin" class="btn btn-default" type="submit" name="submit" value="Yes">
     </div>
   </div>
 
